--- a/twitoff_23/twitoff/templates/base.html
+++ b/twitoff_23/twitoff/templates/base.html
@@ -17,6 +17,12 @@
   </nav>
   <article class="flex two" style="padding: 3em 1em;">
     {% block content %}
+    <div>
+      <h2>Users</h2>
+      {% for user in users %}
+      <a href="/href/{{ user.name }}"><span class="stack">{{ user.name }}</span></a>
+      {% endfor %}
+    </div>
     {% endblock %}
   </article>
   <!-- <script src="https://cdn.jsdelivr.net/npm/umbrellajs"/> -->
